--- a/eas.json
+++ b/eas.json
@@ -2,7 +2,7 @@
   "builds": {
     "android": {
       "release": {
-        "workflow": "generic",
+        "workflow": "managed",
         "buildType": "apk"
       }
     },
