--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-expo-viewport-units": "^0.0.8",
+    "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-optimized-flatlist": "^1.0.4",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
