--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@expo/vector-icons": "^12.0.4",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/slider": "^3.0.3",
+    "@react-native-picker/picker": "^1.15.0",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
@@ -24,9 +25,9 @@
     "react-native": "~0.63.4",
     "react-native-expo-viewport-units": "^0.0.8",
     "react-native-gesture-handler": "~1.8.0",
-    "react-native-optimized-flatlist": "^1.0.4",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
+    "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "~2.15.2",
     "react-native-skeleton-placeholder": "^3.0.4",
     "react-native-unimodules": "~0.12.0",
