--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.4",
+    "@react-native-async-storage/async-storage": "^1.15.3",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/slider": "^3.0.3",
     "@react-native-picker/picker": "^1.15.0",
@@ -17,6 +18,7 @@
     "expo": "~40.0.0",
     "expo-av": "^9.0.0",
     "expo-constants": "~9.3.3",
+    "expo-keep-awake": "~8.4.0",
     "expo-screen-orientation": "~2.1.0",
     "expo-splash-screen": "~0.8.0",
     "expo-updates": "~0.4.0",
@@ -25,6 +27,7 @@
     "react-native": "~0.63.4",
     "react-native-expo-viewport-units": "^0.0.8",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-optimized-flatlist": "^1.0.4",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-scalable-image": "^1.1.0",
