--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-expo-viewport-units": "^0.0.8",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-optimized-flatlist": "^1.0.4",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-scalable-image": "^1.1.0",
