--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "~2.15.2",
     "react-native-skeleton-placeholder": "^3.0.4",
+    "react-native-switch-selector": "^2.1.4",
     "react-native-unimodules": "~0.12.0",
     "react-native-vega-scroll-list": "^1.0.0",
     "react-native-web": "~0.13.12",
