--- a/package.json
+++ b/package.json
@@ -27,16 +27,17 @@
     "react-native": "~0.63.4",
     "react-native-expo-viewport-units": "^0.0.8",
     "react-native-gesture-handler": "~1.8.0",
-    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "~2.15.2",
+    "react-native-scroll-bottom-sheet": "^0.7.0",
     "react-native-skeleton-placeholder": "^3.0.4",
     "react-native-switch-selector": "^2.1.4",
     "react-native-unimodules": "~0.12.0",
     "react-native-vega-scroll-list": "^1.0.0",
     "react-native-web": "~0.13.12",
+    "reanimated-bottom-sheet": "*",
     "tailwind-rn": "^3.0.1"
   },
   "devDependencies": {
